<resources>
    <string name="_FONT_SEPARATOR" translatable="false">-</string>
    <string name="_MINUS_ONE" translatable="false">-1</string>
    <string name="about">About</string>
    <string name="about_4pda" translatable="false">&lt;BR>4PDA: &lt;a href="http://4pda.to/forum/index.php?showtopic=824201">4pda.ru/forum/index.php?showtopic=824201&lt;/a></string>
    <string name="about_copyright" translatable="false">\n\nCopyright 2020-2026 Yury Kharchenko</string>
    <string name="about_crowdin" translatable="false">&lt;BR>Crowdin(translation): &lt;a href="https://crowdin.com/project/j2me-loader">crowdin.com/project/j2me-loader&lt;/a></string>
    <string name="about_email" translatable="false">\n\nEmail: <a href="mailto:j2me.forever@gmail.com">j2me.forever@gmail.com</a>\n</string>
    <string name="about_github" translatable="false">\nGithub: <a href="https://github.com/H3nb/JL-Mod-Plus">H3nb/JL-Mod-Plus</a>\n</string>
    <string name="about_message">This app allows you to launch J2ME apps and games on Android.\n</string>
    <string name="about_xda" translatable="false">&lt;BR>XDA: &lt;a href="https://forum.xda-developers.com/android/apps-games/app-j2me-loader-t3777889">forum.xda-developers.com/android/apps-games/app-j2me-loader-t3777889&lt;/a></string>
    <string name="action_context_delete">Delete</string>
    <string name="action_context_rename">Rename</string>
    <string name="action_context_shortcut">Add shortcut</string>
    <string name="action_keyboard_ime">Keyboard (IME)</string>
    <string name="action_lock_orientation">Lock screen rotate</string>
    <string name="action_reinstall">Reinstall</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="add_profile_description">Create new profile</string>
    <string name="add_resolution_preset">Add resolution to presets</string>
    <string name="alert_map_menu">Menu key (M) is not assigned!\nThis may make it impossible to access the emulator options</string>
    <string name="alert_msg_workdir_not_exists">Working directory does not exist at path:\n%1$s\nDo you want to create it or choose another one?</string>
    <string name="alert_rewrite_profile">A profile named \"%1$s\" already exists.\nDo you want to overwrite it?</string>
    <string name="author">Author: </string>
    <string name="CANCEL_CMD">Cancel</string>
    <string name="change">Change</string>
    <string name="choose">Choose</string>
    <string name="CLEAR_DATA_CMD">Clear data</string>
    <string name="close">Close</string>
    <string name="cmd_menu">Menu</string>
    <string name="config_virtual_screen_size">virtual screen size (original resolutions of MIDlet):</string>
    <string name="CONFIRMATION_REQUIRED">Confirmation required</string>
    <string name="converting_wait">Converting JAR…</string>
    <string name="crash_dialog_message">Do you want to send error report to the developer?</string>
    <string name="crash_dialog_title">Error detected</string>
    <string name="create">create</string>
    <string name="create_apps_dir_failed">Failed to create a folder in the path:\n%1$s\nselect another.</string>
    <string name="default_label">%1$s (default)</string>
    <string name="dismiss">Dismiss</string>
    <string name="donate">Donate</string>
    <string name="donation_paypal_item" translatable="false">J2ME Loader donation</string>
    <string name="edit">Edit</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="err_missing_app">Application not found.\nPlease check storage device %1$savailability or re-create shortcut.</string>
    <string name="error">Error</string>
    <string name="error_disk_io">Storage error: check disk space</string>
    <string name="error_name">Enter name!</string>
    <string name="error_name_exists">Already exists, enter other name</string>
    <string name="exit">Exit</string>
    <string name="external_storage_not_mounted">This app requires external storage</string>
    <string name="FORCE_CLOSE_CONFIRMATION">Force-closing the application may result in data loss or even break it completely!\nProceed?</string>
    <string name="help">Help</string>
    <string name="help_message">&#8226; Enabling filtering in some cases can greatly reduce performance. Disable this option if game is too slow.&lt;BR>&#8226; Image flickering issues can be fixed by enabling the "Immediate processing mode" option.</string>
    <string name="hide_buttons">Hide buttons</string>
    <string name="identity_filter">Fast (no filter)</string>
    <string name="install">install</string>
    <string name="install_done">Application successfully installed!</string>
    <string name="install_jar_needed">Select the JAR file</string>
    <string name="install_jar_non_matched_jad">This app differs from that described in JAD.\nIgnore JAD and install anyway?</string>
    <string name="invalid_resolution_not_saved">Invalid resolutions: not saved!</string>
    <string name="layout_edit_finish">Finish edit mode</string>
    <string name="layout_edit_finished">Edit mode finished</string>
    <string name="layout_edit_mode">Keylayout edit mode</string>
    <string name="layout_scale_mode">Keylayout resize mode</string>
    <string name="layout_switch">Switch keylayout</string>
    <string name="licenses">Licenses</string>
    <string name="load_profile">Load profile</string>
    <string name="loading_info">loading info…</string>
    <string name="log_saved">Log has been saved</string>
    <string name="mapping_dialog_key_not_specified">not specified</string>
    <string name="mapping_dialog_message">Current mapping:\n%1$s</string>
    <string name="mapping_dialog_title">Press a key</string>
    <string name="message_clear_data">Do you really want to clear app data?</string>
    <string name="message_delete">Do you really want to delete this app?</string>
    <string name="midlet_name"><b>Name: </b></string>
    <string name="midlet_size"><b>Size: </b></string>
    <string name="midlet_source"><b>Source: </b></string>
    <string name="midlet_vendor"><b>Vendor: </b></string>
    <string name="midlet_version"><b>Version: </b></string>
    <string name="more">More</string>
    <string name="msg_error_loading_shader">Unsupported shader, default shader is used!</string>
    <string name="msg_immediate_mode_disabled">Immediate mode disabled due to stack overflow</string>
    <string name="msg_mascot_capsule" translatable="false">Mascot Capsule 3D!</string>
    <string name="msg_no_matches">No matches for \"%1$s\"</string>
    <string name="msg_press_again_to_close">Press again to close</string>
    <string name="msg_text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="msg_unsupported_soundbank">Unsupported soundbank, default bank is used!</string>
    <string name="no_data_for_display">No data</string>
    <string name="not_saved_exists">Already exists</string>
    <string name="opt_save_screen_params">save screen params</string>
    <string name="parallel_screen_redrawing">Parallel screen redrawing</string>
    <string name="permission_request_failed">This app requires storage write permission</string>
    <string name="pref_app_sort_date">Date</string>
    <string name="pref_app_sort_name">Name</string>
    <string name="pref_app_sort_title">App sort order</string>
    <string name="pref_app_sort_vendor">Vendor</string>
    <string name="pref_apps_view">view</string>
    <string name="pref_audio_title">Audio</string>
    <string name="PREF_BACKGROUND">Background</string>
    <string name="pref_button_shape_oval">Oval</string>
    <string name="pref_button_shape_rect">Rectangle</string>
    <string name="pref_button_shape_round">Rounded rectangle</string>
    <string name="pref_button_shape_title">Button shape</string>
    <string name="pref_category_experimental">Experimental/temporary options</string>
    <string name="PREF_COLOR_HINT" translatable="false">RRGGBB (hex color)</string>
    <string name="pref_default_settings">Default settings</string>
    <string name="pref_emulator_dir">Working directory</string>
    <string name="pref_enable_actionbar_summary">In fullscreen applications</string>
    <string name="pref_enable_actionbar_title">Enable ActionBar</string>
    <string name="pref_enable_statusbar_title">Enable statusbar</string>
    <string name="pref_encoding_title">Encoding</string>
    <string name="PREF_FILTER">Filter</string>
    <string name="PREF_FONT_ANTI_ALIASING">Anti-Aliasing</string>
    <string name="PREF_FONT_LARGE">Large</string>
    <string name="PREF_FONT_MEDIUM">Medium</string>
    <string name="PREF_FONT_OPTIONS">Font options</string>
    <string name="PREF_FONT_SIZE_IN_SP">Values are in Scaled Pixels</string>
    <string name="PREF_FONT_SMALL">Small</string>
    <string name="PREF_FORCE_FULLSCREEN">Force fullscreen</string>
    <string name="pref_graphics_hw_gles">HW acceleration (OpenGL ES)</string>
    <string name="pref_graphics_hw_surface">HW acceleration (surface)</string>
    <string name="pref_graphics_hw_view">HW acceleration (window)</string>
    <string name="pref_graphics_mode_title">Graphics mode:</string>
    <string name="pref_graphics_software">Software</string>
    <string name="PREF_HEIGHT">Height</string>
    <string name="PREF_HW_ACCELERATION">HW acceleration (unstable)</string>
    <string name="PREF_IMMEDIATE">Immediate processing mode</string>
    <string name="pref_input_devices_title">Input devices</string>
    <string name="PREF_KEEP_ASPECT_RATIO">Keep aspect ratio</string>
    <string name="pref_language">Language</string>
    <string name="PREF_LAYOUT">Layout</string>
    <string name="PREF_LIMIT_FPS">Limit FPS</string>
    <string name="pref_map_keys">Key mappings (GamePad)</string>
    <string name="pref_mascot_summary">Show message when using</string>
    <string name="pref_mascot_title">Detect Mascot Capsule 3D</string>
    <string name="PREF_ORIENTATION">Screen orientation</string>
    <string name="pref_orientation_auto">Auto</string>
    <string name="PREF_VIRTUAL_KEYBOARD_OPTIONS">Virtual keyboard</string>
    <string name="profiles">Profiles</string>
    <string name="save_log">Save log</string>
    <string name="search">Search</string>
    <string name="set_as_default">Set as default</string>
    <string name="virtual_key_0" translatable="false">0</string>
    <string name="virtual_key_1" translatable="false">1</string>
    <string name="virtual_key_2" translatable="false">2</string>
    <string name="virtual_key_3" translatable="false">3</string>
    <string name="virtual_key_4" translatable="false">4</string>
    <string name="virtual_key_5" translatable="false">5</string>
    <string name="virtual_key_6" translatable="false">6</string>
    <string name="virtual_key_7" translatable="false">7</string>
    <string name="virtual_key_8" translatable="false">8</string>
    <string name="virtual_key_9" translatable="false">9</string>
    <string name="virtual_key_a" translatable="false">A</string>
    <string name="virtual_key_b" translatable="false">B</string>
    <string name="virtual_key_c" translatable="false">C</string>
    <string name="virtual_key_d" translatable="false">D</string>
    <string name="virtual_key_down" translatable="false">↓</string>
    <string name="virtual_key_f" translatable="false">F</string>
    <string name="virtual_key_left" translatable="false">←</string>
    <string name="virtual_key_left_soft" translatable="false">L</string>
    <string name="virtual_key_menu" translatable="false">M</string>
    <string name="virtual_key_pound" translatable="false">#</string>
    <string name="virtual_key_right" translatable="false">→</string>
    <string name="virtual_key_right_soft" translatable="false">R</string>
    <string name="virtual_key_star" translatable="false">*</string>
    <string name="virtual_key_up" translatable="false">↑</string>
</resources>