<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="?dialogPreferredPadding"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="text" />

    <CheckBox
        android:id="@+id/cbConfig"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/action_settings" />

    <CheckBox
        android:id="@+id/cbKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/PREF_VIRTUAL_KEYBOARD_OPTIONS" />

    <CheckBox
        android:id="@+id/cbDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_as_default" />
</LinearLayout>
