<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        tools:targetApi="jelly_bean_mr1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/virtual_key_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_a"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_menu"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_b"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/virtual_key_left_soft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_left_soft"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_up"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_right_soft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_right_soft"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/virtual_key_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_left"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_f"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_right"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/virtual_key_d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_d"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_down"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_c"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/virtual_key_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_1"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_2"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_3"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/virtual_key_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_4"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_5"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_6"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/virtual_key_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_7"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_8"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_9"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/virtual_key_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_star"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_0"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/virtual_key_pound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/virtual_key_pound"
                    android:textSize="@dimen/_22sp"
                    app:fontFamily="@font/roboto_regular"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <FrameLayout
        android:id="@+id/keyMapperLayer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90000000"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/keyMapperPopup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:background="?android:colorBackground"
            android:padding="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mapping_dialog_title"
                android:textAppearance="?android:textAppearanceLarge"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_min="wrap" />

            <TextView
                android:id="@+id/keyMapperPopupMsg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minWidth="160dp"
                android:textAppearance="?android:textAppearanceMedium"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_min="wrap"
                tools:text="Current mapping:\nnot specified"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</FrameLayout>
